@@ -1,22 +1,24 @@
 package gov.nysenate.openleg.processors.transcripts.hearing;
 
-import gov.nysenate.openleg.common.util.PublicHearingTextUtils;
 import gov.nysenate.openleg.legislation.transcripts.hearing.PublicHearing;
 import gov.nysenate.openleg.legislation.transcripts.hearing.PublicHearingFile;
 import gov.nysenate.openleg.legislation.transcripts.hearing.PublicHearingId;
 import gov.nysenate.openleg.legislation.transcripts.hearing.dao.PublicHearingDataService;
-import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.Charsets;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.StandardOpenOption;
 import java.time.LocalDateTime;
 
 @Service
 public class PublicHearingParser {
     @Autowired
     private PublicHearingDataService dataService;
+    private final static Charset CP_1252 = Charsets.toCharset("CP1252");
 
     /**
      * Parses a {@link PublicHearingFile}, extracting a
@@ -25,7 +27,8 @@ public class PublicHearingParser {
      * @throws IOException
      */
     public void process(PublicHearingFile publicHearingFile) throws IOException {
-        String fullText = FileUtils.readFileToString(publicHearingFile.getFile(), Charset.defaultCharset());
+        String fullText = Files.readString(publicHearingFile.getFile().toPath(), CP_1252);
+        Files.writeString(publicHearingFile.getFile().toPath(), fullText, StandardOpenOption.TRUNCATE_EXISTING);
         PublicHearingId id = new PublicHearingId(publicHearingFile.getFileName());
         PublicHearing hearing = PublicHearingTextUtils.getHearingFromText(id, fullText);
 
